--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,9 +4,41 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LeidtogiDesktop"
+
+        Icon="http://api.leidtogi.site/favicon.ico"
+        
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="Leidtogi" Height="450" Width="600">
+
+        
+    <Grid ShowGridLines="False">
+        <!-- Icon="pack://application:,,,/src/img/favicon.ico" -->
+
+        <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        
+        <StackPanel Grid.Column="2" Grid.Row="0" x:Name="stackPanelForAddButton" Orientation="Vertical" HorizontalAlignment="Right" Margin="5" />
+
+        <StackPanel Grid.Column="1" Grid.Row="1" x:Name="stackPanelForAddImage" Orientation="Vertical" HorizontalAlignment="Right" Margin="5" />
+
+        <!-- <Canvas Background="Orange">
+            
+            <Button Background="AliceBlue" Content="Top 20 Left 40" Canvas.Top="20" Canvas.Left="40" />
+
+            <Button x:Name="phoneButton" Width="180" Height="40" Margin="5" Canvas.Top="205" Canvas.Left="210">
+                <Button.Content>
+                    <local:Phone Name="Lumia 950" Price="700" />
+                </Button.Content>
+            </Button>
+        </Canvas> -->
 
     </Grid>
 </Window>
