--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,46 +5,77 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LeidtogiDesktop"
 
-        Icon="http://api.leidtogi.site/favicon.ico"
+        Icon="https://api.leidtogi.site/favicon.ico"
         
         mc:Ignorable="d"
-        Title="Leidtogi" Height="450" Width="600">
-
+        Title="Leidtogi" 
+        Height="500" 
+        Width="600">
         
-    <Grid ShowGridLines="True">
-        <!-- Icon="pack://application:,,,/src/img/favicon.ico" -->
+<StackPanel>
+
+    <Menu Height="25" VerticalAlignment="Top" Cursor="Hand">
+        <MenuItem Header="Файл" Cursor="Hand">
+            <MenuItem Header="Новый Проект" Cursor="Hand"></MenuItem>
+            <MenuItem Header="Открыть Проект" Cursor="Hand">
+                <MenuItem Header="WinForms" Cursor="Hand"></MenuItem>
+                <MenuItem Header="WPF" Cursor="Hand"></MenuItem>
+            </MenuItem>
+            <Separator />
+            <MenuItem Header="Выход" x:Name="Exit" Cursor="Hand"></MenuItem>
+        </MenuItem>
+        <MenuItem Header="Изменить" Cursor="Hand"></MenuItem>
+        <MenuItem Header="Просмотр" Cursor="Hand"></MenuItem>
+    </Menu>
+        
+    <Grid 
+    >
+        <!-- ShowGridLines="True" -->
 
         <Grid.RowDefinitions>
-            <RowDefinition  Height="50" />
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="50" />
+            <RowDefinition />
+            <RowDefinition Height="50" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        
-        <StackPanel 
-            Grid.Column="2" 
-            Grid.Row="0" 
-            x:Name="stackPanelForAddButton" 
-            Orientation="Vertical" 
-            HorizontalAlignment="Right" 
-            Margin="5" />
 
         <StackPanel 
-            Grid.Column="1" 
+            Height="50" 
+            Grid.Column="0" 
+            Grid.Row="0" 
+            x:Name="Header" 
+            HorizontalAlignment="Stretch" />
+
+        <StackPanel 
+            Grid.Column="0" 
             Grid.Row="1" 
-            x:Name="stackPanelForAddImage" 
+            Background="Green" 
+            Height="337" 
+            x:Name="Body" 
+        >
+            <Image 
+                Height="100" 
+                Width="100" 
+                Source="logo.bmp"
+            />
+        </StackPanel>
+
+        <StackPanel 
+            Height="40" 
+            Grid.Column="0" 
+            Grid.Row="2" 
+            x:Name="Footer" 
             Orientation="Vertical" 
-            HorizontalAlignment="Right" 
-            Margin="5" />
+            HorizontalAlignment="Stretch" 
+            Background="Blue" 
+            Margin="0 5 0 5" />
+
+
 
         <!-- <Canvas Background="Orange">
-            
             <Button Background="AliceBlue" Content="Top 20 Left 40" Canvas.Top="20" Canvas.Left="40" />
-
             <Button x:Name="phoneButton" Width="180" Height="40" Margin="5" Canvas.Top="205" Canvas.Left="210">
                 <Button.Content>
                     <local:Phone Name="Lumia 950" Price="700" />
@@ -52,5 +83,9 @@
             </Button>
         </Canvas> -->
 
+
     </Grid>
+
+</StackPanel>
+
 </Window>
